# glue-solara

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Procfile  README.md  data_rand.txt  pyproject.toml  qt-glue.ipynb  requirements.txt
.github/workflows/: build.yaml  test.yaml
assets/: custom.css
glue_solara/: ai.py  app.py  hooks.py  linker.py  mdi.py  mdi.vue  misc.py  toolbar.py
glue_solara/plugins/: __init__.py  multiply_primary.py
glue_solara/viewers/: __init__.py  common.py
glue_solara/viewers/grid/: __init__.py  grid.py
glue_solara/viewers/mdi/: __init__.py  mdi.py  mdi.vue  viewer.py
glue_solara/viewers/tab/: __init__.py  tab.py
glue_solara/viewers/xr/: __init__.py  components.py  layer_artist.py  roi.py  tools.py  viewer.py  viewer_state.py
glue_solara/viewers/xr/js/: .gitignore  README.md  bun.lockb  package-lock.json  package.json  rollup.config.js  tsconfig.json
glue_solara/viewers/xr/js/src/: drei.ts  hand-selection.tsx  index.tsx  types.ts  vizxr.tsx  xr.ts
glue_solara/viewers/xr/widgets/: __init__.py  layer_options.py  layer_options.vue  viewer_state_options.py  viewer_state_options.vue
tests/integration/: basics_test.py
tests/unit/: conftest.py  hooks_test.py
