[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glue-solara"
description = "Flexible Solara based Glue UI"
version = "0.0.1"
dependencies = [
    "solara",
    "glue-jupyter",
    "ipypopout",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
]

[tool.ruff]
ignore-init-module-imports = true
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
]
ignore = [
    "E501", # line too long | Black take care of it
]
line-length = 100
select = ["E", "W", "F", "Q", "I"]

[tool.black]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.mypy.overrides]]
module = "glue.*,glue_jupyter.*"
ignore_missing_imports = true
