[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glue-solara"
description = "Flexible Solara based Glue UI"
version = "0.0.1"
dependencies = [
    "solara>=1.40.0",
    "glue-jupyter",
    "ipypopout",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
]

test = [
    "pytest-ipywidgets",
]

[tool.ruff]
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E501", # line too long | Black take care of it
]
select = ["E", "W", "F", "Q", "I"]

[tool.black]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.mypy.overrides]]
module = "glue.*,glue_jupyter.*"
ignore_missing_imports = true
