[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "glue-solara"
description = "Flexible Solara based Glue UI"
version = "0.0.1"
dependencies = [
    "solara>=1.40.0",
    "glue-jupyter",
    "ipypopout",
    "ipyreact",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
]

test = [
    "pytest-ipywidgets",
    "pytest-playwright<0.6", # pytest-playwright doesn't support newer versions, see https://github.com/widgetti/solara/issues/913
]

[tool.ruff]
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E501", # line too long | Black take care of it
]
select = ["E", "W", "F", "Q", "I"]

[tool.black]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.mypy.overrides]]
module = "glue.*,glue_jupyter.*"
ignore_missing_imports = true

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "./glue_solara/viewers/xr/js"
artifacts = [
    "build/**",
]
out_dir = "./glue_solara/viewers/xr/js/build"
commands = [
    "npm ci",
    "npm run build"
]